[package]
name = "std140-macros"
version = "0.1.2"
authors = ["Roland Schermer <roland0507@gmail.com>", "zen-chromeless-platform"]
description = "Procedural macros for the std140 fork crate."
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = [
    "full"
]
