[package]
name = "std140_macros"
version = "0.1.2"
authors = ["Roland Schermer <roland0507@gmail.com>", "zen-chromeless-platform"]
description = "Procedural macros for the std140 fork crate."
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "=1.0.43"
quote = "=1.0.21"

[dependencies.syn]
version = "=1.0.99"
features = [
    "full"
]
